--- a/WebServer/WebContent/css/result.css
+++ b/WebServer/WebContent/css/result.css
@@ -14,9 +14,36 @@ color:#0000FF;
 margin: 0;
 }
 
+#search-list,#search-list1 {
+	display:none;
+	position:absolute;
+	width:80%;
+	background-color:white;
+	text-align:left;
+	//height:50px;
+	border:solid 1 #cccccc;
+	line-height: 1.54;
+	
+}
+
+#search-list div,#search-list1 div {
+	padding-left:5px;
+}
+
+#search-list div:onhover,#search-list1 div:onhover {
+	background-color:blue;
+}
+#search-list1 {
+	width:80%;
+}
+
 .result-abstract {
 	font-size:small;
 	max-height:60px;
+}
+
+.result-abstract .red, .result-title .red  {
+	color:rgb(204, 0 , 0);
 }
 
 .result-item-bottom {
